# gitty

./: .gitignore  Cargo.toml  README.md  SETUP.md
crates/simulator/: Cargo.toml
crates/simulator/src/: main.rs  profile.rs
src/: display.rs  main.rs  ui.rs
