[package]
name = "gitty-simulator"
version = "0.1.0"
authors = ["leegeunhyeok <dev.ghlee@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
mousefood = { version = "0.2.1" }
ratatui   = "0.29.0"

[features]
default   = []
simulator = ["mousefood/simulator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
